--- a/src/main/webapp/app/base/system/menuList.html
+++ b/src/main/webapp/app/base/system/menuList.html
@@ -2,5 +2,5 @@
     <div class="col-lg-12" id="area-search"></div>
 </div>
 <div class="row">
-    <div class="col-lg-12" id="grid-order-list"></div>
+    <div class="col-lg-12" id="grid-list"></div>
 </div>
