basic template 분리

--- a/src/main/webapp/app/main/main.html
+++ b/src/main/webapp/app/main/main.html
@@ -67,6 +67,7 @@
 				     <div class='panel-body'></div>
 				</div>    
             </div>
+            <div id="main-detail"></div>
             <div id="main-msg"></div>
         </div>
         
