--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,9 +32,9 @@
 			requirejs(['common/config/base'], function(){
 	            
 	            requirejs(['jquery','bootstrap', 'jquery-ui','underscore', 'text', 'moment', 'bootstrap-dialog','index']
-	             , function($, bootstrap, _, $UI, text, moment, bs_dialog, _index){
+	             , function($, bootstrap, _, $UI, text, moment, bs_dialog, index){
 	            	
-	            	 new _index().render({});
+	            	new index().render({});
 	            });
 	        });
 		</script>
