--- a/src/main/webapp/app/main/main.html
+++ b/src/main/webapp/app/main/main.html
@@ -59,14 +59,7 @@
 		    <div class="area-inner">
 				<div class="inner bg-light lter" id="main-area"></div>
             </div>
-            <div id="main-editor">
-                <div class='panel panel-color'>
-				     <div class='panel-heading'>
-				         <button type='button' class='close' >×</button><h3 class='panel-title'></h3>
-				     </div>
-				     <div class='panel-body'></div>
-				</div>    
-            </div>
+            <div id="main-editor"></div>
             <div id="main-msg"></div>
         </div>
         
