--- a/src/main/webapp/fw/manager/tmpl/mainEditor.html
+++ b/src/main/webapp/fw/manager/tmpl/mainEditor.html
@@ -1,8 +1,9 @@
 
 <div class='panel panel-color'>
-     <div class='panel-heading'>
-         <button type='button' class='close' >×</button><h3 class='panel-title'></h3>
+     <div class='panel-heading' id="editor-header">
+         <button type='button' class='close' >×</button>
+         <h3 class='panel-title'></h3>
      </div>
-     <div class='panel-body edit-area'></div>
-     <div class='panel-toolbar'></div>
+     <div class='panel-body edit-area wrap-scrollable' id="editor-body"></div>
+     <div class='panel-toolbar' id="editor-tail"></div>
 </div>
