work checkbox and radio

--- a/src/main/webapp/app/base/system/optionList.html
+++ b/src/main/webapp/app/base/system/optionList.html
@@ -1,6 +1,13 @@
 <div class="row">
-    <div class="col-lg-12" id="area-search"></div>
+    <div class="col-lg-12">
+    	<div id="area-search"></div>
+    </div>
 </div>
 <div class="row">
-    <div class="col-lg-12" id="grid-list"></div>
+    <div class="col-lg-12">
+    	<div id="grid-list" class=" p-5"></div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-12"><div class='area-search-result'></div></div>
 </div>
