--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,7 +31,7 @@
 		<script>
 			requirejs(['common/config/base'], function(){
 	            
-	            requirejs(['jquery','bootstrap', 'jquery-ui','underscore', 'text', 'moment', 'bootstrap-dialog','index']
+	            requirejs(['jquery','bootstrap', 'jquery-ui','underscore', 'text', 'moment', 'bootstrap-dialog','app/index']
 	             , function($, bootstrap, _, $UI, text, moment, bs_dialog, index){
 	            	
 	            	new index().render({});
