--- a/src/main/webapp/app/main/main.html
+++ b/src/main/webapp/app/main/main.html
@@ -59,7 +59,7 @@
 		    <div class="area-inner">
 				<div class="inner bg-light lter" id="main-area"></div>
             </div>
-            <div id="main-editor"></div>
+            <div id="main-editor" class="panel-right"></div>
             <div id="main-msg"></div>
         </div>
         
