--- a/src/main/webapp/fw/manager/tmpl/mainEditor.html
+++ b/src/main/webapp/fw/manager/tmpl/mainEditor.html
@@ -2,6 +2,7 @@
 <div class='panel panel-color'>
      <div class='panel-heading' id="editor-header">
          <button type='button' class='close' >×</button>
+         <button type='button' class='close location'><i class="fa fa-arrow-down"></i></button>
          <h3 class='panel-title'></h3>
      </div>
      <div class='panel-body edit-area wrap-scrollable' id="editor-body"></div>
