--- a/src/main/webapp/app/base/system/codeList.html
+++ b/src/main/webapp/app/base/system/codeList.html
@@ -1,17 +1,17 @@
 <div class="row">
-    <div class="col-lg-5">
+    <div class="col-sm-5">
     	<div id="area-search-group"></div>
     </div>
-    <div class="col-lg-7">
+    <div class="col-sm-7">
     	<div id="area-search-code"></div>
     </div>
 </div>
 
 <div class="row">
-    <div class="col-lg-5">
+    <div class="col-sm-5">
     	<div id="grid-list-group"></div>
     </div>
-    <div class="col-lg-7" >
+    <div class="col-sm-7" >
     	<div id="grid-list-code"></div>
     </div>
 </div>
