--- a/src/main/webapp/app/base/system/orgList.html
+++ b/src/main/webapp/app/base/system/orgList.html
@@ -2,6 +2,7 @@
     <div class="col-sm-6" id="area-org">
     	<div class="row">
     		<div class="col-sm-12" id="area-org-comp"></div>
+    		<div class="col-sm-12" id="area-org-comp-list"></div>
     	</div>
     	<div class="row">
     		<div class="col-sm-12" id="area-org-dept"></div>
