스크립트 스타일 교정중

--- a/src/main/webapp/app/main/main.html
+++ b/src/main/webapp/app/main/main.html
@@ -67,7 +67,6 @@
     </div>
     <!-- /#content -->
     <div id="right" class="bg-light lter">
-                      
     </div>
     <!-- /#right -->
 </div>
@@ -76,3 +75,9 @@
     <p>2016 &copy; Metis Bootstrap Admin Template</p>
 </footer>
 <!-- /#footer -->
+<div id="style-switcher" class="style-switcher hidden-xs">
+	<h5><a href="javascript:void(0)" id="switcher-link">
+		<i class="fa fa-cogs fa-2x"></i>
+	</a></h5>
+</div>
+<div id="area-modal"></div>
