--- a/src/main/webapp/app/base/system/orgList.html
+++ b/src/main/webapp/app/base/system/orgList.html
@@ -1,11 +1,11 @@
 <div class="row">
-    <div class="col-sm-6" id="area-org">
-    	<div class="row">
-    		<div class="col-sm-12" id="area-org-comp"></div>
-    		<div class="col-sm-12" id="area-org-comp-list"></div>
+    <div class="col-sm-6">
+    	<div class="row"  id="area-comp">
+    		<div class="col-sm-12" id="area-comp-title"></div>
+    		<div class="col-sm-12" id="area-comp-list"></div>
     	</div>
     	<div class="row">
-    		<div class="col-sm-12" id="area-org-dept"></div>
+    		<div class="col-sm-12" id="area-dept"></div>
     	</div>
     </div>
     <div class="col-sm-6" id="area-users">
