--- a/src/main/webapp/app/main/main.html
+++ b/src/main/webapp/app/main/main.html
@@ -1,4 +1,4 @@
-<div class="bg-dark dk" id="wrap">
+<div class="bg-dark dker" id="wrap">
     <div id="top">
         <!-- .navbar -->
         <nav class="navbar navbar-inverse navbar-static-top">
@@ -44,7 +44,7 @@
        </div>
        <!-- #menu -->
        <ul id="menu" class="bg-blue dker"></ul>
-       <!-- /#menu -->
+       
     </div>
     <!-- /#left -->
     <div id="content">
@@ -75,6 +75,8 @@
     <p>2016 &copy; Metis Bootstrap Admin Template</p>
 </footer>
 <!-- /#footer -->
+<!-- /#menu -->
+<div id="search-bar-user"></div><!-- /.search-bar -->
 <div id="style-switcher" class="style-switcher hidden-xs">
 	<h5><a href="javascript:void(0)" id="switcher-link">
 		<i class="fa fa-cogs fa-2x"></i>
