--- a/src/main/webapp/app/base/system/menuList.html
+++ b/src/main/webapp/app/base/system/menuList.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-sm-12" id="area-search"></div>
+    <div class="col-sm-6" id="area-menu-list"></div>
 </div>
 <div class="row">
-    <div class="col-sm-12" id="grid-list"></div>
+    <div class="col-sm-6" id="area-menu-detail"></div>
 </div>
